<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="@dimen/margin_medium_3"
    app:cardElevation="4dp"
    android:clipToPadding="false"
    android:layout_marginStart="@dimen/margin_medium"
    android:layout_marginEnd="@dimen/margin_medium"
    android:layout_marginBottom="@dimen/margin_medium" >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivTourPhoto"
            android:layout_width="@dimen/image_size"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/h4"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvLocation"
            android:layout_width="@dimen/detail_box"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_medium_2"
            android:layout_marginTop="@dimen/margin_small"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="@string/txt_location"
            android:singleLine="true"
            android:textSize="@dimen/text_regular_3x"
            android:ems="2"
            app:layout_constraintStart_toEndOf="@+id/ivTourPhoto"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvName"
            android:layout_width="@dimen/margin_160"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_small"
            android:text="@string/txt_name"
            app:layout_constraintStart_toStartOf="@+id/tvLocation"
            app:layout_constraintTop_toBottomOf="@+id/tvLocation" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvMaxScore"
            android:layout_width="@dimen/margin_xlarge"
            android:layout_height="@dimen/margin_70"
            android:layout_marginEnd="@dimen/margin_medium_2"
            android:background="@drawable/round_view"
            android:drawableBottom="@drawable/ic_star_gray_24dp"
            android:paddingStart="@dimen/margin_small"
            android:gravity="center"
            android:paddingTop="@dimen/margin_card_medium"
            android:paddingEnd="@dimen/margin_small"
            android:paddingBottom="@dimen/margin_medium_2"
            android:text="@string/txt_avgRate"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="@+id/ivTourPhoto"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/ivTourPhoto" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvPrice"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:text="@string/txt_price"
            android:layout_marginTop="@dimen/margin_small"
            android:textSize="@dimen/text_regular_3x"
            android:fontFamily="sans-serif-condensed-medium"
            app:layout_constraintStart_toStartOf="@+id/tvLocation"
            app:layout_constraintTop_toBottomOf="@+id/tvName" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>