<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="180dp"
    android:layout_height="250dp"
    android:layout_margin="20dp"
    app:cardCornerRadius="20dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/ivCountry"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/h2"
            android:scaleType="centerCrop"
            android:clickable="true"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnUpper"
            android:layout_width="80dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:background="#9E8282"
            android:textColor="@color/white"
            android:layout_margin="@dimen/margin_medium"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:text="New"/>

        <TextView
            android:id="@+id/tvLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_medium"
            android:layout_marginTop="@dimen/margin_160"
            android:layout_weight="1"
            android:singleLine="true"
            android:textStyle="bold"
            android:text="@string/txt_location"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/tvMaxTour"
            android:layout_below="@+id/tvLocation"
            android:layout_marginTop="@dimen/margin_medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_medium"
            android:textColor="@color/white"
            android:text="@string/txt_maxTours"/>

        <TextView
            android:id="@+id/tvAvgRating"
            android:layout_toEndOf="@id/tvLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_card_medium_2"
            android:layout_marginBottom="@dimen/margin_50"
            android:background="@drawable/round_view"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:text="@string/txt_avgRate"
            android:layout_alignParentBottom="true"
            android:drawableBottom="@drawable/ic_star_white_24dp"/>
    </RelativeLayout>
</com.google.android.material.card.MaterialCardView>
